--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .logo {
-  height: 40vmin;
+  height: 25vmin;
   pointer-events: none;
   animation: none;
 }
@@ -47,32 +47,31 @@
 }
 
 button {
-  margin-top: 4px;
-  width: 200px;
-  font-size: 1.02rem;
-  padding: .5rem 1.75rem;
-  /*border-width: 5px;
-  border-style: outset;*/
+  margin: 4px 0;
+  min-width: 200px;
+  font-size: 1rem;
+  padding: .8rem 1.75rem;
   border-radius: 4px;
+  border: none;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
-  background: linear-gradient(-90deg, #ff8234,  #ff6347, #ff4500);
+  
 }
 
 button.primary {
   color: #fffff0;
-  background-color: #ff6347;
-  border-color: #ff4500;
+  background: linear-gradient(-90deg, #ff8234,  #ff6347, #ff4500);
 }
 
 button:hover {
+  color: #b33000;
   background-color: #ff4500;
   cursor: pointer;
 }
 
 button:focus {
   outline: none;
-  box-shadow: 0 0 3px 3px rgba(235, 34, 34, 0.6);
+  box-shadow: 0 0 0 .2rem rgba(255, 69, 0, .5);
 }
 
 button.clicked {
