--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,30 @@
   }
 }
 
-.header {
+.animation {
   /* background-color: #282c34; */
-  min-height: 100vh;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #444444;
+}
+
+.content {
+  margin: 20px auto;
+  width: 15%;
+  padding: 10px;
+
+  text-align: left;
+
+  border-radius: 1rem;
+  background: linear-gradient(-90deg, #ff8234,  #ff6347, #ff4500);
+}
+
+.content ol li {
+  color: #ffffff;
 }
 
 @keyframes logo-spin-left {
